# iv-tutor

./: CMakeLists.txt  README.md
IVTutor/: CMakeLists.txt  IVTutor.py
IVTutor/Resources/UI/: IVTutor.ui
electrical/: arduinoRead.py
electrical/Arduino/btn_test/: btn_test.ino
electrical/Arduino/gyroTimer/: gyroTimer.ino
electrical/Arduino/iv_tutor_arduino/: iv_tutor_arduino.ino
electrical/Arduino/needleCheck/: needleCheck.ino
electrical/Arduino/relayTest/: relayTest.ino
electrical/Arduino/veinInsertion/: veinInsertion.ino
electrical/veinInsertion/: veinInsertion.ino
